update and fix common bugs

--- a/01-List_And_List_Comprehension_In_Python/LearnList/list.ipynb
+++ b/01-List_And_List_Comprehension_In_Python/LearnList/list.ipynb
@@ -1,19 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56daac4c",
+   "cell_type": "markdown",
+   "id": "58dad24a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Introduction to list\n",
+    "#### list are ordered, mutable collections of items.\n",
+    "#### They can contain items of different data types.\n",
+    "\n",
+    "### Topics conver lists-\n",
+    "##### 1. Introduction to Lists\n",
+    "##### 2. Creating List\n",
+    "##### 3. Assecing Lists Elements\n",
+    "##### 4. Modifying List Elements\n",
+    "##### 5. List Methods\n",
+    "##### 6. Slcing List\n",
+    "##### 7.Itreating Over List\n",
+    "##### 8.List Comperehensions\n",
+    "##### 9. Nested List\n",
+    "##### 10. Practcing and Examples"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27bb2b70",
+   "cell_type": "markdown",
+   "id": "3cb86245",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
