--- a/09-Dictioaries_In_Python/LearnDictionaries/Dictionaries.ipynb
+++ b/09-Dictioaries_In_Python/LearnDictionaries/Dictionaries.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "41d78da9",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "159198b2",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "342a098c",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "02f95c34",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "bd0c4f31",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "675d80d0",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "70fd129e",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "id": "c7c6a478",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "be2294fe",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "id": "4778879d",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "d26227bc",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "fb316b5f",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "31d5f50c",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "id": "d6986f19",
    "metadata": {},
    "outputs": [
@@ -352,8 +352,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "4f4b8222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'student1': {'Name': 'Vishal', 'Age': 21}, 'student2': {'Name': 'Singh', 'Age': 22}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "students={\n",
+    "    \"student1\":{\"Name\":\"Vishal\",\"Age\":21},\n",
+    "    \"student2\":{\"Name\":\"Singh\",\"Age\":22}\n",
+    "}\n",
+    "print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "ede13291",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Name': 'Vishal', 'Age': 21}\n",
+      "Singh\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing Nested Dictionaries\n",
+    "print(students[\"student1\"])\n",
+    "print(students[\"student2\"][\"Name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9dab3c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student1: {'Name': 'Vishal', 'Age': 21}\n",
+      "  Name: Vishal\n",
+      "  Age: 21\n",
+      "student2: {'Name': 'Singh', 'Age': 22}\n",
+      "  Name: Singh\n",
+      "  Age: 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Iterating over Nested Dictionaries\n",
+    "for student_id, student_info in students.items():\n",
+    "    print(f\"{student_id}: {student_info}\")\n",
+    "    for key, value in student_info.items():\n",
+    "        print(f\"  {key}: {value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e595a8af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('student1', {'Name': 'Vishal', 'Age': 21}), ('student2', {'Name': 'Singh', 'Age': 22})])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "3e0d1f2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictonaries Comprehension\n",
+    "square={x:x**2 for x in range(5)}\n",
+    "print(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "82aeaad1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 2: 4, 4: 16, 6: 36, 8: 64}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conditional  Dictonaries Comprehension\n",
+    "evens= {X:X**2 for X in range(10) if X%2==0}\n",
+    "print(evens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51bdfee2",
    "metadata": {},
    "outputs": [],
    "source": []
